# rust-reaction

./: .gitignore  CLAUDE.md  Cargo.toml  FINDINGS.md  README.md  TESTING.md  test_component.rs
.claude/: settings.local.json
.claude/commands/: README.md  audit.md  checklist.md  daily-review.md  discovery.md  groom.md  implement.md  maintenance.md  plan.md  quick-sequences.md  refactor.md  research.md  retrospective.md  review-code.md  review-tests.md  sequences.md  status.md  sync.md
.devcontainer/: README.md  devcontainer.json  post-create.sh
archive/prototype-v1/: ARCHIVE.md  README.md
archive/prototype-v1/crates/rust-reaction/: Cargo.toml  README.md
archive/prototype-v1/crates/rust-reaction/src/: component.rs  dom.rs  event.rs  lib.rs  routing.rs  state.rs  view.rs
archive/prototype-v1/examples/counter/: Cargo.toml  index.html
archive/prototype-v1/examples/todo-app/: Cargo.toml  index.html
archive/prototype-v1/examples/todo-app/src/: lib.rs
context-network/: discovery.md
context-network/decisions/: 001-rust-native-approach.md  002-self-modifying-apps-pivot.md
context-network/elements/design/: rust-native-patterns.md
context-network/elements/research/: code-examples.md  overview.md
context-network/elements/use-cases/: self-modifying-apps.md
context-network/foundation/: project_definition.md
context-network/meta/updates/: index.md
context-network/meta/updates/infrastructure/: index.md
context-network/meta/updates/structure/: index.md
context-network/planning/: component-library-integration.md  critical-evaluation.md  framework-differentiation-analysis.md  implementation-roadmap.md  implementation-summary.md  morpheus-tailwind-integration.md  reorganization-options.md  roadmap.md  tailwind-integration-complete.md
context-network/processes/: ai-assistant-testing.md  index.md
crates/morpheus-compiler/: Cargo.toml
crates/morpheus-compiler/src/: lib.rs  subprocess.rs
crates/morpheus-core/: Cargo.toml
crates/morpheus-core/src/: component.rs  errors.rs  lib.rs  permissions.rs  state.rs
crates/morpheus-runtime/: Cargo.toml
crates/morpheus-runtime/src/: lib.rs  wasm_loader.rs
examples/: COMPONENT_LIBRARIES.md
examples/ai-playground/: Cargo.toml  QUICKSTART.md  README.md
examples/ai-playground/public/: index.html
examples/ai-playground/src/: main.rs
examples/compiler-test/: Cargo.toml  README.md
examples/compiler-test/src/: main.rs
examples/counter/src/: lib.rs
examples/integration-test/: Cargo.toml  README.md
examples/integration-test/src/: main.rs
examples/leptos-poc/: AI_SYSTEM_PROMPT.md  Cargo.toml  FINDINGS.md  README.md  TAILWIND_PATTERNS.md
examples/leptos-poc/public/: index.html
examples/leptos-poc/src/: lib.rs
examples/material-poc/: Cargo.toml  README.md
examples/material-poc/src/: lib.rs
examples/morpheus-complete/: .env.example  Cargo.toml  README.md
examples/morpheus-complete/public/: index.html
examples/morpheus-complete/src/: main.rs  main.rs.backup
examples/safety-demo/: Cargo.toml  README.md
examples/safety-demo/public/: index.html
examples/safety-demo/src/: main.rs
examples/thaw-poc/: Cargo.toml  README.md
examples/thaw-poc/src/: lib.rs
examples/visual-demo/: Cargo.toml  README.md
examples/visual-demo/public/: index.html
examples/visual-demo/src/: lib.rs
examples/visual-demo/versions/: HOTRELOAD.md  lib_v2.rs  lib_v3.rs
test_wasm_build/: Cargo.toml
