[workspace]
members = [
    "crates/rust-reaction",
    "examples/counter",
    "examples/todo-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rust Reaction Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Web platform
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "HtmlButtonElement",
] }
js-sys = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
once_cell = "1.20"
