[package]
name = "morpheus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for Morpheus self-modifying apps"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
