[package]
name = "compiler-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-compiler"
path = "src/main.rs"

[dependencies]
morpheus-compiler = { path = "../../crates/morpheus-compiler" }
morpheus-core = { path = "../../crates/morpheus-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
