[package]
name = "visual-demo"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "console",
] }

morpheus-core = { path = "../../crates/morpheus-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
